# Test

./: .replit  CMakeCache.txt  CMakeLists.txt  hello.cpp  main.cpp
.ccls-cache/@@home@runner@Test/: @nix@store@520q9diriqq2sh3s105h891fp4s3a4jn-linux-headers-6.9@include@asm-generic@errno-base.h.blob  @nix@store@520q9diriqq2sh3s105h891fp4s3a4jn-linux-headers-6.9@include@asm-generic@errno.h.blob  @nix@store@520q9diriqq2sh3s105h891fp4s3a4jn-linux-headers-6.9@include@asm@errno.h.blob  @nix@store@520q9diriqq2sh3s105h891fp4s3a4jn-linux-headers-6.9@include@linux@errno.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@backward@binders.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bit.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@alloc_traits.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@allocated_ptr.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@allocator.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@basic_ios.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@basic_ios.tcc.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@basic_string.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@basic_string.tcc.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@char_traits.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@charconv.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@concept_check.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@cpp_type_traits.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@cxxabi_forced.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@cxxabi_init_exception.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@erase_if.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@exception.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@exception_defines.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@exception_ptr.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@functexcept.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@functional_hash.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@hash_bytes.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@invoke.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@ios_base.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@istream.tcc.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@list.tcc.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@locale_classes.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@locale_classes.tcc.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@locale_facets.h.blob  @nix@store@5h49djy8q0d2sc3nhbgwf74pw84bv0l3-gcc-13.3.0@include@c++@13.3.0@bits@locale_facets.tcc.blob  (+165 more)
.ccls-cache/@home@runner@Test/: CardGame@include@CardGame.hpp.blob  (+64 more)
CardGame/: CMakeLists.txt  Makefile
CardGame/include/: CardGame.hpp  Carte.hpp  CarteGenerator.hpp  CartesAlgo.hpp  ConcreteMonitor.hpp  GameInterface.hpp  GameMaster.hpp  GameMasterMonitor.hpp  GameMechanics.hpp  GameMechanicsMonitor.hpp  GameMechanicsSpe.hpp  Hand.hpp  HandMonitor.hpp  InfosJoueur.hpp  InfosJoueurMonitor.hpp  Monitor.hpp  PaquetCarte.hpp  ParamCarte.hpp  Plateau.hpp  PlateauJoueur.hpp  PlateauMonitor.hpp  Player.hpp  PlayerInterface.hpp  StatutPlateau.hpp  hello.hpp
CardGame/include/Carte/: Carte.hpp
CardGame/include/Joueur/: Joueur.hpp
CardGame/src/: Carte.cpp  CarteGenerator.cpp  CartesAlgo.cpp  ConcreteMonitor.cpp  GameMaster.cpp  GameMasterMonitor.cpp  GameMechanics.cpp  GameMechanicsMonitor.cpp  GameMechanicsSpe.cpp  Hand.cpp  InfosJoueur.cpp  Monitor.cpp  PaquetCarte.cpp  Plateau.cpp  PlateauJoueur.cpp  hello.cpp
CardGame/src/Carte/: Carte.cpp
CardGame/src/Joueur/: Joueur.cpp
MSL/: CMakeLists.txt  main.cpp
MSL/include/: BasicBot.hpp  Carte.hpp  CarteGenerateurStandard.hpp  CarteMSL.cpp  CarteMSL.hpp  CartesAlgoMSL.hpp  MSLMechanics.hpp  MSLPlayer.hpp  MyMultiMap.hpp  MySmileLife.hpp
MSL/src/: CarteGenerateurStandard.cpp  CartesAlgoMSL.cpp  CreationJoueur.cpp  MSLMechanics.cpp  MySmileLifeTest.cpp
MySmileLife/: CMakeLists.txt  Makefile
MySmileLife/include/: BasicBot.hpp  CarteGenerateurStandard.hpp  CarteMSL.cpp  CarteMSL.hpp  CartesAlgoMSL.hpp  CartesMSLConfig.hpp  EffetCartePlateau.hpp  JouerCarteMSL.hpp  JouerMalus.hpp  JouerMetier.hpp  JouerSpecial.hpp  JoueurConsole.hpp  MSLMechanics.hpp  MSLPlayer.hpp  MyMultiMap.hpp  MySmileLife.hpp  jouerMetier.hpp
MySmileLife/src/: BasicBot.cpp  CarteGenerateurStandard.cpp  CarteMSL.cpp  CartesAlgoMSL.cpp  EffetCartePlateau.cpp  JouerCarteMSL.cpp  JouerMalus.cpp  JouerSpecial.cpp  JoueurConsole.cpp  MSLMechanics.cpp  MySmileLife.cpp  jouerMetier.cpp
MySmileLife/tests/: CreationJoueur.cpp  MSLMechanicsTest.cpp  MSLMechanicsTest.hpp  MSLTests.hpp  MySmileLifeTest.cpp  TestCarteUnitaire.cpp  TestScenario.cpp  TestScenario.hpp  mainTests.cpp
Test/: CMakeLists.txt  main.cpp
Test/include/: BasicBot.hpp  Carte.hpp  Test.hpp  hello_test.hpp
Test/src/: Carte.cpp  CreationJoueur.cpp  hello_test.cpp
wBuild/: CMakeCache.txt
(+317 files in other folders)
